
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct msghdr {int msg_iovlen; int msg_controllen; scalar_t__ msg_control; scalar_t__ msg_namelen; int * msg_name; struct iovec* msg_iov; } ;
struct iovec {char* iov_base; int iov_len; } ;
typedef scalar_t__ caddr_t ;
typedef int buf ;


 scalar_t__ CMSG_DATA (int *) ;
 int CONTROLLEN ;
 int * cmptr ;
 int * malloc (int ) ;
 scalar_t__ recvmsg (int,struct msghdr*,int ) ;

__attribute__((used)) static int
receive_fd (int helper_fd)
{
 struct iovec iov [1];
 struct msghdr msg;
 char buf [32];

 iov [0].iov_base = buf;
 iov [0].iov_len = sizeof (buf);
 msg.msg_iov = iov;
 msg.msg_iovlen = 1;
 msg.msg_name = ((void*)0);
 msg.msg_namelen = 0;

 if (cmptr == ((void*)0) && (cmptr = malloc (CONTROLLEN)) == ((void*)0))
  return -1;
 msg.msg_control = (caddr_t) cmptr;
 msg.msg_controllen = CONTROLLEN;

 if (recvmsg (helper_fd, &msg, 0) <= 0)
  return -1;

 return *(int *) CMSG_DATA (cmptr);
}
